# sanset-backend

./: .replit  INSTALL.md  README.md  pyproject.toml  replit.md  seed_data.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  cart.py  orders.py  products.py  recommend.py  search.py  users.py
app/core/: config.py  security.py
app/crud/: cart.py  order.py  product.py  user.py
app/db/: session.py
app/ml/: recommender.py
app/models/: address.py  cart.py  order.py  product.py  recommendation.py  user.py
app/schemas/: cart.py  order.py  product.py  recommendation.py  user.py
attached_assets/: Pasted-Nice-below-is-a-complete-developer-ready-backend-documentation-for-Sanset-FastAPI-Drop-1762681985710_1762681985712.txt
